2006-04-06  Jakub Steiner <jimmac@ximian.com>

	* 22x22/actions/*: 22x22 versions of the action icons
	* 16x16/actions/*: some tweaks
	
2006-04-05  Jakub Steiner <jimmac@ximian.com>

	* 16x16/actions/*: apply tango style

2006-03-26  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-18  Rodney Dawes  <dobey@novell.com>

	* MAINTAINERS: Added MAINTAINERS file

	Fixes #335023

2006-03-13  Vladimer Sichinava  <alinux@siena.linux.it>

	* configure.in: Added "ka" Georgian language.

2006-02-27  Rodney Dawes  <dobey@novell.com>

	* 24x24/status/Makefile.am: Add weather-clear-night
	* */status/weather-clear-night.png: Update style and add missing 22x22
	and 24x24 sizes

2006-02-26  Rodney Dawes  <dobey@novell.com>

	* */status/Makefile.am: Update for weather-clear at missing sizes
	* */status/weather-clear.*: Update style for weather-clear icon

2006-02-11  Rodney Dawes  <dobey@novell.com>

	* configure.in: Up version to 2.15.0 for HEAD

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* im-yahoo:
	* im-nov: based on work by Andreas Nilsson

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* im-*: all proper sizes. bug #330394

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* web-browser: provide all resolutions, fixes bug #330092

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/gnome-shutdown.png: remove old icon (have scalable)

2006-02-09  Jakub Steiner <jimmac@ximian.com>

	* text-html: make Rodney happy ;)

2006-02-09  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/gnome-shutdown.png:
	* 22x22/apps/gnome-shutdown.png:
	* 24x24/apps/gnome-shutdown.png:
	* scalable/apps/gnome-shutdown.svg: fixes bug #330520

2006-02-09  Jakub Steiner <jimmac@ximian.com>

	* 24x24/devices: can't do 24 from 22 as it would mean depending on
		imagemagick. doing manually for now.

2006-02-08  Jakub Steiner <jimmac@ximian.com>

	* drive-cdrom:
	* drive-harddisk:
	* drive-removable-media:
	* media-cdrom: new device icons
	