@@ -1,3 +1,9 @@
+2006-04-06  Rodney Dawes  <dobey@novell.com>
+
+	* 16x16/stock/generic/Makefile.am:
+	* 16x16/stock/generic/stock_weather*: Remove the stock_weather icons
+	from here, as they are replaced by the weather-* icons in status
+
 2006-04-06  Jakub Steiner <jimmac@ximian.com>
 
 	* 22x22/actions/*: 22x22 versions of the action icons
